$Id$

2016-02-15  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: APPLE SSD TS064E (ticket #655)

2016-02-02  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: output unavailable rather than 255C for Drive
        Trip temperature; skip background scan lpage for tape drives

2016-02-02  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs: 250GB MX200
	  (ticket #644), M500 mSATA and M.2
	- OCZ Trion SSDs: Rename, add Trion 150
	- Innodisk 3ME3 SSDs: SATADOM-SL 3IE3

2016-01-25  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin: add launchctl script for the smartd and remove depricated one.
	"On current systems there is only one recommend way: launchd"

2016-01-24  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fix possible reallocf with 0 bytes arg (ticket #640)
	drivedb.h: add Corsair Extreme SSD (ticket #642)
	os_darwin.cpp: fix error reporting if open fails

2016-01-23  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp: do not print bogus memory allocation error message if
	  there are no devices found

2016-01-22  Christian Franke  <franke@computer.org>

	Various fixes suggested by clang analyser (ticket #640):
	dev_areca.cpp: Fix check of ARCMSR_READ_RQBUFFER result.
	knowndrives.cpp: Add missing member initialization.
	smartd.cpp: Fix crash on missing argument to '-s' directive.
	Add missing variable initialization.  Remove redundant assignment.

2016-01-21  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: Added ADATA SP550 SSD (ticket #638)
	os_freebsd.cpp: Reduce variable scope where possible (cppcheck: variableScope)
	os_openbsd/os_netbsd - removed never used warning code defines (cppcheck)

2016-01-21  Christian Franke  <franke@computer.org>

	ataprint.cpp, smartd.cpp: Don't issue SCT commands if ATA Security
	is locked (ticket #637).

2016-01-19  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - Samsung PM871 SSD family (ticket #636)